@@ -41,7 +41,6 @@
         <Filename Value="deltaclient.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="deltaclient"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
@@ -69,10 +68,11 @@
         <Filename Value="configurations.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="configurations"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="3" Y="4"/>
+        <CursorPos X="48" Y="23"/>
         <UsageCount Value="46"/>
         <Loaded Value="True"/>
       </Unit2>
@@ -102,8 +102,8 @@
         <UnitName Value="datastructure"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="45" Y="124"/>
+        <TopLine Value="100"/>
+        <CursorPos X="34" Y="132"/>
         <UsageCount Value="46"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -205,123 +205,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="76" Column="35" TopLine="57"/>
+        <Caret Line="41" Column="47" TopLine="40"/>
       </Position1>
       <Position2>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="185" Column="94" TopLine="162"/>
+        <Caret Line="219" Column="43" TopLine="188"/>
       </Position2>
       <Position3>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="41" Column="47" TopLine="40"/>
+        <Caret Line="223" Column="79" TopLine="206"/>
       </Position3>
       <Position4>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="219" Column="43" TopLine="188"/>
+        <Caret Line="219" Column="48" TopLine="207"/>
       </Position4>
       <Position5>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="223" Column="79" TopLine="206"/>
+        <Caret Line="3" Column="6" TopLine="1"/>
       </Position5>
       <Position6>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="219" Column="48" TopLine="207"/>
+        <Caret Line="39" Column="25" TopLine="20"/>
       </Position6>
       <Position7>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="3" Column="6" TopLine="1"/>
+        <Caret Line="197" Column="1" TopLine="176"/>
       </Position7>
       <Position8>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="39" Column="25" TopLine="20"/>
+        <Caret Line="11" Column="48" TopLine="1"/>
       </Position8>
       <Position9>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="197" Column="1" TopLine="176"/>
+        <Caret Line="235" Column="53" TopLine="209"/>
       </Position9>
       <Position10>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="11" Column="48" TopLine="1"/>
+        <Caret Line="229" Column="29" TopLine="211"/>
       </Position10>
       <Position11>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="235" Column="53" TopLine="209"/>
+        <Caret Line="236" Column="71" TopLine="212"/>
       </Position11>
       <Position12>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="229" Column="29" TopLine="211"/>
+        <Caret Line="238" Column="57" TopLine="213"/>
       </Position12>
       <Position13>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="236" Column="71" TopLine="212"/>
+        <Caret Line="198" Column="30" TopLine="185"/>
       </Position13>
       <Position14>
-        <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="238" Column="57" TopLine="213"/>
+        <Filename Value="settingsunit.pas"/>
+        <Caret Line="21" Column="58" TopLine="1"/>
       </Position14>
       <Position15>
-        <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="198" Column="30" TopLine="185"/>
+        <Filename Value="settingsunit.pas"/>
+        <Caret Line="55" Column="3" TopLine="53"/>
       </Position15>
       <Position16>
         <Filename Value="settingsunit.pas"/>
-        <Caret Line="21" Column="58" TopLine="1"/>
+        <Caret Line="26" Column="15" TopLine="25"/>
       </Position16>
       <Position17>
         <Filename Value="settingsunit.pas"/>
-        <Caret Line="55" Column="3" TopLine="53"/>
+        <Caret Line="58" Column="20" TopLine="54"/>
       </Position17>
       <Position18>
         <Filename Value="settingsunit.pas"/>
-        <Caret Line="26" Column="15" TopLine="25"/>
+        <Caret Line="56" Column="7" TopLine="37"/>
       </Position18>
       <Position19>
-        <Filename Value="settingsunit.pas"/>
-        <Caret Line="58" Column="20" TopLine="54"/>
-      </Position19>
-      <Position20>
-        <Filename Value="settingsunit.pas"/>
-        <Caret Line="56" Column="7" TopLine="37"/>
-      </Position20>
-      <Position21>
         <Filename Value="deltaclient.lpr"/>
         <Caret Line="20" Column="55" TopLine="1"/>
-      </Position21>
-      <Position22>
+      </Position19>
+      <Position20>
         <Filename Value="deltaclient.lpr"/>
         <Caret Line="22" Column="1" TopLine="1"/>
-      </Position22>
-      <Position23>
+      </Position20>
+      <Position21>
         <Filename Value="configurations.pas"/>
         <Caret Line="56" Column="51" TopLine="1"/>
+      </Position21>
+      <Position22>
+        <Filename Value="deltaclientunit.pas"/>
+        <Caret Line="260" Column="100" TopLine="134"/>
+      </Position22>
+      <Position23>
+        <Filename Value="settingsunit.pas"/>
+        <Caret Line="9" Column="30" TopLine="1"/>
       </Position23>
       <Position24>
         <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="260" Column="100" TopLine="134"/>
+        <Caret Line="278" Column="92" TopLine="262"/>
       </Position24>
       <Position25>
-        <Filename Value="settingsunit.pas"/>
-        <Caret Line="9" Column="30" TopLine="1"/>
-      </Position25>
-      <Position26>
-        <Filename Value="deltaclientunit.pas"/>
-        <Caret Line="278" Column="92" TopLine="262"/>
-      </Position26>
-      <Position27>
         <Filename Value="deltaclient.lpr"/>
         <Caret Line="22" Column="1" TopLine="1"/>
-      </Position27>
-      <Position28>
+      </Position25>
+      <Position26>
         <Filename Value="..\lib\own\misc\downloadutils.pas"/>
         <Caret Line="90" Column="1" TopLine="72"/>
-      </Position28>
-      <Position29>
+      </Position26>
+      <Position27>
         <Filename Value="..\lib\own\misc\downloadutils.pas"/>
         <Caret Line="119" Column="27" TopLine="86"/>
-      </Position29>
-      <Position30>
+      </Position27>
+      <Position28>
         <Filename Value="deltaclient.lpr"/>
         <Caret Line="23" Column="136" TopLine="1"/>
+      </Position28>
+      <Position29>
+        <Filename Value="datastructure.pas"/>
+        <Caret Line="126" Column="93" TopLine="102"/>
+      </Position29>
+      <Position30>
+        <Filename Value="datastructure.pas"/>
+        <Caret Line="132" Column="34" TopLine="100"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
